regression-tests/test-results/clang-18/pure2-bugfix-for-non-local-function-expression.cpp.output
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:1:46: error: expected body of lambda expression
    1 | template<typename T> concept v = []() -> bool;
      |                                              ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:2:2: error: expected unqualified-id
    2 | (); 
      |  ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:3:53: error: expected body of lambda expression
    3 | using u = std::type_identity_t<decltype([]() -> void;)>;
      |                                                     ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:3:54: error: expected '>'
    3 | using u = std::type_identity_t<decltype([]() -> void;)>;
      |                                                      ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:3:31: note: to match this '<'
    3 | using u = std::type_identity_t<decltype([]() -> void;)>;
      |                               ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:3:54: error: expected unqualified-id
    3 | using u = std::type_identity_t<decltype([]() -> void;)>;
      |                                                      ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:5:59: error: expected body of lambda expression
    5 | class t: public std::type_identity_t<decltype([]() -> void;)> {
      |                                                           ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:5:60: error: expected '>'
    5 | class t: public std::type_identity_t<decltype([]() -> void;)> {
      |                                                            ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:5:37: note: to match this '<'
    5 | class t: public std::type_identity_t<decltype([]() -> void;)> {
      |                                     ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:5:60: error: expected '{' after base class list
    5 | class t: public std::type_identity_t<decltype([]() -> void;)> {
      |                                                            ^
pure2-bugfix-for-non-local-function-expression/pure2-bugfix-for-non-local-function-expression.cpp2:5:60: error: expected unqualified-id
9 errors generated.
